@@ -3,7 +3,6 @@ package SPVM::Builder::Config;
 use strict;
 use warnings;
 use Config;
-use SPVM::Builder::Util;
 
 sub new {
   my $class = shift;
@@ -25,8 +24,8 @@ sub new_default {
   $bconf->replace_all_config($default_config);
   
   # Add include directory to ccflags
-  my $include_dir = $INC{"SPVM/Builder/Util.pm"};
-  $include_dir =~ s/\/Util\.pm$//;
+  my $include_dir = $INC{"SPVM/Builder/Config.pm"};
+  $include_dir =~ s/\/Config\.pm$//;
   $include_dir .= '/include';
   $bconf->add_ccflags("-I$include_dir");
   
@@ -44,6 +43,39 @@ sub new_default {
   if ($ENV{SPVM_TEST_ENABLE_WARNINGS}) {
     $bconf->add_ccflags("-Wall -Wextra -Wno-unused-label -Wno-unused-function -Wno-unused-label -Wno-unused-parameter -Wno-unused-variable -Wno-missing-field-initializers");
   }
+  
+  return $bconf;
+}
+
+sub new_cpp {
+  my $class = shift;
+  
+  my $bconf = SPVM::Builder::Config->new;
+  
+  # Use default config
+  my $default_config = {%Config};
+  $bconf->replace_all_config($default_config);
+  
+  # Add include directory to ccflags
+  my $include_dir = $INC{"SPVM/Builder/Config.pm"};
+  $include_dir =~ s/\/Config\.pm$//;
+  $include_dir .= '/include';
+  $bconf->add_ccflags("-I$include_dir");
+  
+  # Add math library to extra_linker_flags
+  $bconf->add_extra_linker_flags("-lm");
+  
+  # Optimize
+  $bconf->set_optimize('-O3');
+  
+  # CC
+  $bconf->set_cc('g++');
+  
+  # LD
+  $bconf->set_ld('g++');
+  
+  # Delete std
+  $bconf->delete_std;
   
   return $bconf;
 }
