@@ -4,6 +4,8 @@
   - add cache to SPVM::Builder::Config
   - add set_cache to SPVM::Builder::Config
   - fix spvm_build/include directory not detected bug
+  - add set_cache to SPVM::Builder::Config
+  - add new_cpp to SPVM::Builder::Config
 0.0420 2018-04-03
   - fix before relase bugs
 0.0419 2018-04-03
